multiple horizontal scrollbar fix test 1

--- a/assets/styles/banktel.css
+++ b/assets/styles/banktel.css
@@ -11925,16 +11925,37 @@ section.menu-system nav.menu li {
 section.menu-system nav.menu .level {
   background: #464747;
   position: absolute;
-  top: 120px;
   right: 0;
   bottom: 0;
   left: 0;
   width: 200px;
   z-index: 1;
   overflow-y: scroll;
+  overflow-x:hidden;
   -ms-overflow-style: scrollbar;
   /* SECOND LEVEL */
 }
+
+
+section.menu-system nav.menu.closed.expanded .level {
+  top: 120px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+
+}
+
+
+section.menu-system nav.menu.closed .level {
+  top: 60px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+
+}
+
 
 section.menu-system nav.menu .level .level {
   -webkit-transition: left 0.2s;
